<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="com.gamal.diagnosakendaraan.Kendala">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_kendala"
        android:textColor="#ffff0000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textPertanyaan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/text_pertanyaan"
        android:textSize="24sp"
        android:textColor="#ffff0000"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnYa"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/text_ya" />

        <Button
            android:id="@+id/btnTidak"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/text_tidak" />

    </LinearLayout>
</RelativeLayout>
